versioned_docs/version-8.6/apis-tools/tasklist-api/objects/task.mdx
---
id: task
title: Task
hide_table_of_contents: false
---

export const Bullet = () => (
  <>
    <span
      style={{
        fontWeight: "normal",
        fontSize: ".5em",
        color: "var(--ifm-color-secondary-darkest)",
      }}
    >
      &nbsp;●&nbsp;
    </span>
  </>
);

export const SpecifiedBy = (props) => (
  <>
    Specification
    <a
      className="link"
      style={{ fontSize: "1.5em", paddingLeft: "4px" }}
      target="_blank"
      href={props.url}
      title={"Specified by " + props.url}
    >
      ⎘
    </a>
  </>
);

export const Badge = (props) => (
  <>
    <span class={"badge badge--" + props.class}>{props.text}</span>
  </>
);

Describes the User task.

```graphql
type Task {
  id: ID!
  name: String!
  taskDefinitionId: String!
  processName: String!
  creationTime: String!
  completionTime: String
  assignee: String
  variables: [Variable!]
  taskState: TaskState!
  sortValues: [String!]
  isFirst: Boolean
  formKey: String
  processDefinitionId: String
  processInstanceId: String
  candidateGroups: [String!]
  candidateUsers: [String!]
  followUpDate: DateTime
  #Due date for Task
  dueDate: DateTime
}
```

### Fields

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>id</b></code>](#)<Bullet />[`ID!`](../scalars/id.mdx) <Badge class="secondary" text="non-null"/> <Badge class="secondary" text="scalar"/>

> The unique identifier of the task

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>name</b></code>](#)<Bullet />[`String!`](../scalars/string.mdx) <Badge class="secondary" text="non-null"/> <Badge class="secondary" text="scalar"/>

> Name of the task

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>taskDefinitionId</b></code>](#)<Bullet />[`String!`](../scalars/string.mdx) <Badge class="secondary" text="non-null"/> <Badge class="secondary" text="scalar"/>

> Task Definition ID (node BPMN id) of the process

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>processName</b></code>](#)<Bullet />[`String!`](../scalars/string.mdx) <Badge class="secondary" text="non-null"/> <Badge class="secondary" text="scalar"/>

> Name of the process

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>creationTime</b></code>](#)<Bullet />[`String!`](../scalars/string.mdx) <Badge class="secondary" text="non-null"/> <Badge class="secondary" text="scalar"/>

> When was the task created

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>completionTime</b></code>](#)<Bullet />[`String`](../scalars/string.mdx) <Badge class="secondary" text="scalar"/>

> When was the task completed

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>assignee</b></code>](#)<Bullet />[`String`](../scalars/string.mdx) <Badge class="secondary" text="scalar"/>

> Username/id of who is assigned to the task

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>variables</b></code>](#)<Bullet />[`[Variable!]`](../objects/variable.mdx) <Badge class="secondary" text="list"/> <Badge class="secondary" text="object"/>

> Variables associated to the task

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>taskState</b></code>](#)<Bullet />[`TaskState!`](../enums/task-state.mdx) <Badge class="secondary" text="non-null"/> <Badge class="secondary" text="enum"/>

> State of the task

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>sortValues</b></code>](#)<Bullet />[`[String!]`](../scalars/string.mdx) <Badge class="secondary" text="list"/> <Badge class="secondary" text="scalar"/>

> Array of values to be copied into `TaskQuery` to request for next or previous page of tasks.

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>isFirst</b></code>](#)<Bullet />[`Boolean`](../scalars/boolean.mdx) <Badge class="secondary" text="scalar"/>

> Flag to show that the task is first in current filter

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>formKey</b></code>](#)<Bullet />[`String`](../scalars/string.mdx) <Badge class="secondary" text="scalar"/>

> Reference to the task form

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>processDefinitionId</b></code>](#)<Bullet />[`String`](../scalars/string.mdx) <Badge class="secondary" text="scalar"/>

> Reference to process definition

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>processInstanceId</b></code>](#)<Bullet />[`String`](../scalars/string.mdx) <Badge class="secondary" text="scalar"/>

> Reference to process instance id

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>candidateGroups</b></code>](#)<Bullet />[`[String!]`](../scalars/string.mdx) <Badge class="secondary" text="list"/> <Badge class="secondary" text="scalar"/>

> Candidate groups

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>candidateUsers</b></code>](#)<Bullet />[`[String!]`](../scalars/string.mdx) <Badge class="secondary" text="list"/> <Badge class="secondary" text="scalar"/>

> Candidate users

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>followUpDate</b></code>](#)<Bullet />[`[String!]`](../scalars/DateTime.mdx) <Badge class="secondary" text="list"/> <Badge class="secondary" text="scalar"/>

> Follow-up date for the task

#### [<code style={{ fontWeight: 'normal' }}>Task.<b>dueDate</b></code>](#)<Bullet />[`[String!]`](../scalars/DateTime.mdx) <Badge class="secondary" text="list"/> <Badge class="secondary" text="scalar"/>

> Due date for the task

### Returned by

[`claimTask`](../mutations/claim-task.mdx) <Badge class="secondary" text="mutation"/><Bullet />[`completeTask`](../mutations/complete-task.mdx) <Badge class="secondary" text="mutation"/><Bullet />[`task`](../queries/task.mdx) <Badge class="secondary" text="query"/><Bullet />[`tasks`](../queries/tasks.mdx) <Badge class="secondary" text="query"/><Bullet />[`unclaimTask`](../mutations/unclaim-task.mdx) <Badge class="secondary" text="mutation"/>
